--- a/app/src/main/res/layout/mvvm_sample.xml
+++ b/app/src/main/res/layout/mvvm_sample.xml
@@ -124,5 +124,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_mvvm_btn" />
 
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/next_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:onClick="@{()->mvvmviewmodel.startNextAct()}"
+            android:text="NEXT ACTIVITY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/login_error_msg" />
+
+
     </android.support.constraint.ConstraintLayout>
 </layout>
